「サイバー攻撃 被害事例／詳細」９０％

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                                     <span>2020.8.31 (水）</span>
                                 </div>
                                 <div class="blog-title">
-                                    <a href="#">〇〇〇〇グループの事業戦略を発表</span>
+                                    <a href="#">〇〇〇〇グループの事業戦略を発表</a>
                                 </div>
                             </div>
                         </div>
