--- a/example-detail.html
+++ b/example-detail.html
@@ -109,7 +109,7 @@
                                     <span>流出</span>
                                 </div>
                                 <div class="field-value">
-                                    <span>当該サイト会員のメールアドレス105,180件</span>
+                                    <span><b>当該サイト会員のメールアドレス105,180件</b></span>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                                     <span>要因</span>
                                 </div>
                                 <div class="field-value">
-                                    <span>システムの脆弱性を突いた外部からの不正アクセス</span>
+                                    <span><b>システムの脆弱性を突いた外部からの不正アクセス</b></span>
                                 </div>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                                     <span>想定被害額</span>
                                 </div>
                                 <div class="field-value">
-                                    <span>約5,300万円</span>
+                                    <span><b>約5,300万円</b></span>
                                     <span>上記に加え、会員サイト信用失墜＋会員離れの恐れ</span>
                                 </div>
                             </div>
@@ -149,7 +149,7 @@
                                     <span>商号</span>
                                 </div>
                                 <div class="field-value">
-                                    <a href="#">イマジニア株式会社</a>
+                                    <a href="#">イマジニア株式会社<img src="assets/img/external-link-symbol.png"></a>
                                 </div>
                             </div>
                         </div>
