--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         <section class="diagnose-form">
             <div class="section-container white-background">
                 <div class="section-title">
-                    <h3>Check WordPress<span>自社サイトのWordPressの有無を確認</span></h3>
+                    <h3>Check WordPress<span>自社サイトの WordPressの有無を確認</span></h3>
                 </div>
                 <div class="form">
                     <form>
@@ -450,8 +450,10 @@
                             <input type="text" placeholder="https://www.example.com">
                         </div>
                         <div class="input-check">
-                            <input type="checkbox" name="agreement" id="agreement">
-                            <label for="agreement">入力したアドレスを診断することに同意します。</label>
+                            <label class="checkbox-label">入力したアドレスを診断することに同意します。
+                                <input type="checkbox">
+                                <span class="checkbox-mark"></span>
+                            </label>
                         </div>
                         <div class="input-submit">
                             <div class="btn-container">
@@ -541,13 +543,13 @@
                         定期的な脆弱性診断＆マルウェア自動検知・<br>駆除機能の導入を支援、安全・安心なWebサイトへ
                     </p>
                     <div class="commission">
-                        <div class="label">
-                            <span>診断ツール利用料</span>
-                        </div>
-                        <div class="price">
+                        <span class="label">
+                            診断ツール利用料
+                        </span>
+                        <span class="price">
                             <span class="value">12,000</span>
                             <span class="unit">円～／年間</span>
-                        </div>
+                        </span>
                     </div>
                 </div>
                 <div class="link-detail">
