--- a/index.html
+++ b/index.html
@@ -57,12 +57,9 @@
         </section>
         <section class="hero">
             <div class="hero-item" style="background-image: url(./assets/img/hero01.png);">
-                <div class="hero-title secondary">
+                <div class="hero-title">
                     <div class="hero-title-wrapper">
-                        <h2>
-                            自社サイトのセキュリティを<br>
-                            チェックしましょう
-                        </h2>
+                        <h2>自社サイトの<br class="sp">セキュリティを<br>チェックしましょう</h2>
                     </div>
                 </div>
             </div>
@@ -115,14 +112,14 @@
                         </div>
                     </div>
                     <div class="reference">
-                        <span>※直近１年間の合計、2020年MM月DD日時点、株式会社サンエイ調べ</span>
+                        <span>※直近１年間の合計、2020年MM月DD日時点、<br class="sp">株式会社サンエイ調べ</span>
                     </div>
                 </div>
             </div>
         </section>
         <section class="information-leak">
             <div class="section-title">
-                <h3>Information leak<span>サイバー攻撃 被害事例</span></h3>                
+                <h3>Information leak<br><span>サイバー攻撃 被害事例</span></h3>
             </div>
             <div class="section-content">
                 <div class="container">
@@ -226,7 +223,9 @@
         </section>
         <section class="vulnerability gray-background">
             <div class="section-title">
-                <h3>Vulnerability<span>WordPress脆弱性 危険度ランキング</span></h3>
+                <h3>Vulnerability
+                    <span>WordPress脆弱性<br class="sp">危険度ランキング</span>
+                </h3>
             </div>
             <div class="section-content">
                 <div class="link">
@@ -442,7 +441,9 @@
         <section class="diagnose-form">
             <div class="section-container white-background">
                 <div class="section-title">
-                    <h3>Check WordPress<span>自社サイトの WordPressの有無を確認</span></h3>
+                    <h3>Check WordPress
+                        <span>自社サイトのWordPressの<br class="sp">有無を確認</span>
+                    </h3>
                 </div>
                 <div class="form">
                     <form>
