--- a/example-detail.html
+++ b/example-detail.html
@@ -58,7 +58,7 @@
                 <ul>
                     <li><a href="#">ホーム</a></li>
                     <li><a href="#">サイバー攻撃 被害事例</a></li>
-                    <li><a href="#">「いつでもリラックマ」管理サーバへ不正アクセス、メールアドレス105,180件流出</a></li>
+                    <li><span>「いつでもリラックマ」管理サーバへ不正アクセス、メールアドレス105,180件流出</span></li>
                   </ul>
             </div>
         </section>
@@ -85,14 +85,14 @@
 
             <div class="button-area">
                 <div class="btn-container">
-                    <a href="#" class="btn">不正アクセス</a>
-                    <a href="#" class="btn">不正アクセス</a>
-                    <a href="#" class="btn btn--red">会員サイト</a>
-                    <a href="#" class="btn btn--red">会員サイト</a>
-                    <a href="#" class="btn">不正アクセス</a>
-                    <a href="#" class="btn">不正アクセス</a>
-                    <a href="#" class="btn btn--red">会員サイト</a>
-                    <a href="#" class="btn btn--red">会員サイト</a>
+                    <a class="btn">不正アクセス</a>
+                    <a class="btn">不正アクセス</a>
+                    <a class="btn btn--red">会員サイト</a>
+                    <a class="btn btn--red">会員サイト</a>
+                    <a class="btn">不正アクセス</a>
+                    <a class="btn">不正アクセス</a>
+                    <a class="btn btn--red">会員サイト</a>
+                    <a class="btn btn--red">会員サイト</a>
                 </div>
             </div>
         </section>
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="section-title">
-                <h3><span>被害企業概要</span></h3>                
+                <h3><span>被害企業概要</span></h3>
             </div>
             <div class="section-content">
                 <div class="field-container">
@@ -330,7 +330,9 @@
         </section>
         <section class="information-leak">
             <div class="section-title">
-                <h3>Information leak<span>その他のサイバー攻撃 被害事例</span></h3>                
+                <h3>Information leak
+                    <span>その他のサイバー攻撃 <br class="sp">被害事例</span>
+                </h3>
             </div>
             <div class="section-content">
                 <div class="container">
